fix: update CORS configuration in SecurityConfig.java to allow all origins and methods for improved compatibility